--- a/index.html
+++ b/index.html
@@ -240,24 +240,15 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Lin Xiong</a>
+      <a class="navbar-brand" href="index.html">Code Page</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="files/CV_lin.pdf">CV</a>
+  <a href="gedi.html">GEDI</a>
 </li>
 <li>
-  <a href="research.html">Research</a>
-</li>
-<li>
-  <a href="paper.html">Publications</a>
-</li>
-<li>
-  <a href="Presentations.html">Presentations</a>
-</li>
-<li>
-  <a href="blog.html">Blog</a>
+  <a href="opus.html">GPS_OPUS</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -295,19 +286,13 @@ $(document).ready(function () {
 <div id="section" class="section level2">
 <h2>—</h2>
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p><img src="images/lin.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="left"></p>
+<!-- <img src="images/lin.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="left"> -->
 <!-- <table><tr><td bgcolor=orange>background：orange</td></tr></table> -->
 <!-- background-image: "images/R10.jpg" -->
-<p><font size="5"> add sth from local</p>
+<p><font size="5"></p>
 <p>Lin Xiong</p>
-<p>Ph.D. Candidate</p>
-<p>Geophysics, Geodesy, and Geosensing</p>
-<p>Earth and Atmospheric Science Department</p>
-<p>University of Houston</p>
-<p>Email: <a href="mailto:lxiong2@uh.edu" class="email">lxiong2@uh.edu</a></p>
-<p>Office: 231 SR1</p>
 <p></font></p>
-<p>I am a fifth-year Ph.D. student of geophysics, working with Prof. G.W. Wang. I am looking for a job in academia now.</p>
+<p>upload my scripts</p>
 <!--  ![R10 antenna](images/R10.JPG) -->
 </div>
 
